[package]
name = "qgateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = "*"

# 序列化
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }