[package]
name = "qgateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }

tokio-tungstenite = "*"

yaml-rust = "0.4.5"

chrono = "0.4"

protobuf = "2.25.2"

[build-dependencies]
protoc = "2.25.2"